# anton_math

./: .gitmodules  CMakeLists.txt  README.md
private/: mat2.cpp  mat3.cpp  mat4.cpp  math.cpp  quat.cpp  transform.cpp  vec2.cpp  vec3.cpp  vec4.cpp  vector.cpp
private/detail/: utility.hpp
public/anton/math/: mat2.hpp  mat3.hpp  mat4.hpp  math.hpp  matrix2.hpp  matrix3.hpp  matrix4.hpp  primitives.hpp  quat.hpp  quaternion.hpp  transform.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vector2.hpp  vector3.hpp  vector4.hpp
public/anton/math/detail/: utility.hpp
